--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
 
     {%- include footer.html -%}
 
+    <!-- Crimson Sun Sea JS: preloader, starfield and page enhancements -->
+    <script src="{{ "/assets/js/crimson.js" | relative_url }}"></script>
+
   </body>
 
 </html>
