--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,11 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="display: flex;padding: 2px;">
-      {%- if site.title-logo -%}
-        <img src="{{ site.title-logo | relative_url }}" class="logo_img" alt="{{ site.title | escape }}" style="width:60px;"></img>
-        <h2 class="logo_text">{{ site.title}}</h2>
-      {%- else -%}
-        {{ site.title | escape }}
-      {%- endif -%}
+    <a class="site-title" rel="author" href="{{ '/' | relative_url }}">
+      <img src="{{ '/images/crimson-sun-logo.svg' | relative_url }}" 
+          alt="Crimson Sun Logo" 
+          class="site-logo" />
+      <span class="sr-only">{{ site.title | escape }}</span>
     </a>
     {%- if page_paths -%}
       <nav class="site-nav">
