--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,11 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
-    <!-- Centered Social Media -->
-    <div class="footer-social-center">
-      {%- include social.html -%}
-    </div>
-
-    <!-- Centered Copyright -->
-    <div class="footer-copyright">
-      <div class="copyright">
-        © {{ 'now' | date: "%Y" }} Crimson Sun. All rights reserved.
-        <span class="footer-text">Created with ♥ beneath a twilight sky.</span>
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-4">
+        {%- include social.html -%}
       </div>
     </div>
   </div>
+
 </footer>
