--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -112,10 +112,15 @@ a {
 
   &:hover {
     color: $text-color;
+    text-decoration: underline;
   }
 
   .social-media-list &:hover {
     text-decoration: none;
+
+    .username {
+      text-decoration: underline;
+    }
   }
 }
 
