--- a/assets/css/familyTree.css
+++ b/assets/css/familyTree.css
@@ -18,6 +18,7 @@ body {
 .tree ul {
 	padding-top: 20px;
 	position: relative;
+	transition: .5s;
 }
 .tree li {
 	display: inline-table;
@@ -25,6 +26,7 @@ body {
 	list-style-type: none;
 	position: relative;
 	padding: 10px;
+	transition: .5s;
 }
 .tree li::before, .tree li::after {
 	content: '';
@@ -76,6 +78,7 @@ body {
 	border-radius: 5px;
 	text-decoration-line: none;
 	border-radius: 5px;
+	transition: .5s;
 }
 .tree li a img {
 	width: 50px;
