--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,35 +1,21 @@
-<header class="site-header" role="banner">
-
-  <div class="wrapper">
-    {%- assign default_paths = site.pages | map: "path" -%}
-    {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="display: flex;padding: 2px;">
-      {%- if site.title-logo -%}
-        <img src="{{ site.title-logo | relative_url }}" class="logo_img" alt="{{ site.title | escape }}" style="width:60px;"></img>
-        <h2 class="logo_text">{{ site.title}}</h2>
-      {%- else -%}
-        {{ site.title | escape }}
-      {%- endif -%}
-    </a>
+<header role="banner">
+  {%- assign default_paths = site.pages | map: "path" -%}
+  {%- assign page_paths = site.header_pages | default: default_paths -%}
+  
+  <div class="header-content">
+    <div class="logo">
+      <a href="{{ "/" | relative_url }}">
+        <img src="{{ "/assets/images/crimson-sun-logo-wide.svg" | relative_url }}" alt="紅日 - Crimson Sun" class="logo-image-wide">
+      </a>
+    </div>
+    
     {%- if page_paths -%}
-      <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-          <span class="menu-icon">
-            <svg viewBox="0 0 18 15" width="18px" height="15px">
-              <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
-            </svg>
-          </span>
-        </label>
-
-        <div class="trigger">
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title and my_page.permalink != "/cv/" and my_page.permalink != "/cv_ja/" and my_page.permalink != "/mom_family_tree/" -%}
-              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-          {%- endfor -%}
-        </div>
+      <nav>
+        <ul class="nav-menu">
+          <li><a href="{{ "/" | relative_url }}" class="{% if page.url == '/' %}active{% endif %}"><i class="fas fa-home"></i> Home</a></li>
+          <li><a href="{{ "/songlist/" | relative_url }}" class="{% if page.url == '/songlist/' %}active{% endif %}"><i class="fas fa-music"></i> Songs</a></li>
+          <li><a href="{{ "/about/" | relative_url }}" class="{% if page.url == '/about/' %}active{% endif %}"><i class="fas fa-info-circle"></i> About</a></li>
+        </ul>
       </nav>
     {%- endif -%}
   </div>
