--- a/assets/style.css
+++ b/assets/style.css
@@ -27,14 +27,21 @@ body {
     background-position: center;
 }
 
-.page-content {
-    background-color: rgba(230, 255, 118, 0.5); /* antiquewhite with 50% transparency */
-}
-
 .social-media-list{
     font-size: x-large;
 }
 
 .svg-icon {
     vertical-align: middle;
+}
+
+.main-card {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
+    padding: 30px;
+    margin: 20px 0;
+    backdrop-filter: blur(5px);
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    border: 1px solid rgba(255, 255, 255, 0.2);
 }
